--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,13 @@
 	</parent>
 	<groupId>com.rushikesh.apis</groupId>
 	<artifactId>example</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>example</name>
 	<description>Demo project for Spring Boot</description>
 	<scm>
-   <connection>scm:git:https://github.com/rubgade/example.git</connection>
-   <url>https://github.com/rubgade/example.git</url>
-   <developerConnection>scm:git:https://github.com/rubgade/example.git</developerConnection>
-    <tag>example-0.0.1</tag>
+   <connection>scm:git:git://github.com:rubgade/example.git</connection>
+   <url>git://github.com:rubgade/example.git</url>
+   <developerConnection>scm:git:git://github.com:rubgade/example.git</developerConnection>
   </scm>
 	<properties>
 		<java.version>11</java.version>
