--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
 	<name>example</name>
 	<description>Demo project for Spring Boot</description>
 	<scm>
-   <connection>scm:git:git://github.com/rubgade/example.git</connection>
-   <url>git://github.com/rubgade/example.git</url>
-   <developerConnection>scm:git:git://github.com/rubgade/example.git</developerConnection>
+   <connection>scm:git:ssh://git@github.com/rubgade/example.git</connection>
+   <url>https://github.com/rubgade/example.git</url>
+   <developerConnection>scm:git:ssh://git@github.com/rubgade/example.git</developerConnection>
   </scm>
 	<properties>
 		<java.version>11</java.version>
