--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,14 @@
 	</parent>
 	<groupId>com.rushikesh.apis</groupId>
 	<artifactId>example</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>example</name>
 	<description>Demo project for Spring Boot</description>
 	<scm>
    <connection>scm:git:ssh://git@github.com/rubgade/example.git</connection>
    <url>https://github.com/rubgade/example.git</url>
    <developerConnection>scm:git:ssh://git@github.com/rubgade/example.git</developerConnection>
+    <tag>example-0.0.1</tag>
   </scm>
 	<properties>
 		<java.version>11</java.version>
